David: Fixed strange spacing on timer

--- a/src/puzzle_time/PuzzleTime/src/pages/profile/profile.scss
+++ b/src/puzzle_time/PuzzleTime/src/pages/profile/profile.scss
@@ -1,7 +1,7 @@
 page-profile {
 	.navButtons{
 		text-align: center;
-		font-size: 52px;
+		font-size: 28px;
 	}
 	.nav{
 		width:25%;
